Added certification links.

--- a/Resume-Tom-Dean.html
+++ b/Resume-Tom-Dean.html
@@ -606,9 +606,11 @@ code {
 <h3 id="kubernetes-and-cloud-native-associate-kcna"><strong>Kubernetes and Cloud Native Associate (KCNA)</strong></h3>
 <h4 id="the-linux-foundation">The Linux Foundation</h4>
 <p>Issued July 2022 · Expires July 2025</p>
+<p><a href="https://ti-user-certificates.s3.amazonaws.com/e0df7fbf-a057-42af-8a1f-590912be5460/8d5a36b6-bc08-459c-bf82-b1f2fa99061a-thomas-s-dean-jr-52aeb184-d3e2-4cc0-a248-dfc4504ea59f-certificate.pdf">KCNA Certificate</a></p>
 <h3 id="microsoft-certified-azure-fundamentals-az-900"><strong>Microsoft Certified: Azure Fundamentals (AZ-900)</strong></h3>
 <h4 id="microsoft">Microsoft</h4>
 <p>Issued July 2020</p>
+<p><a href="https://www.credly.com/badges/0ba6530d-eb11-48c8-b3ba-be5134bd3243/linked_in_profile">Microsoft Certified: Azure Fundamentals Certificate</a></p>
 
 </body>
 </html>
