Updated Licenses and Certifications section, generated new HTML/PDF files.

--- a/Resume-Tom-Dean.html
+++ b/Resume-Tom-Dean.html
@@ -614,7 +614,7 @@ code {
 <h4 id="diploma"><strong>Diploma</strong></h4>
 <p>Activities and societies: Yearbook, Foreign Exchange Club</p>
 <p>General Studies with a focus on mathematics, chemistry, physics and German.</p>
-<h2 id="current-certifications"><strong>Current Certifications</strong></h2>
+<h2 id="licenses-and-certifications"><strong>Licenses and Certifications</strong></h2>
 <h3 id="fundamentals-of-the-service-mesh"><strong>Fundamentals of the Service Mesh</strong></h3>
 <h4 id="buoyant"><strong>Buoyant</strong></h4>
 <p>Issued Jan 2024 · Does Not Expire</p>
@@ -622,18 +622,18 @@ code {
 <p>Skills: Containers · Kubernetes · Networking</p>
 <h3 id="aws-certified-cloud-practitioner"><strong>AWS Certified Cloud Practitioner</strong></h3>
 <h4 id="amazon-web-services-aws"><strong>Amazon Web Services (AWS)</strong></h4>
-<p>Issued December 2023· Expires December 2026</p>
+<p>Issued December 2023 · Expires December 2026</p>
 <p><a href="https://aws.amazon.com/verification">Validation Number: JK1312XJ5JQ1QFK3</a></p>
 <p>Skills: Amazon Web Services (AWS) · AWS CloudFormation</p>
 <h3 id="certified-kubernetes-administrator-cka"><strong>Certified Kubernetes Administrator (CKA)</strong></h3>
 <h4 id="cloud-native-computing-foundation"><strong>Cloud Native Computing Foundation</strong></h4>
-<p>Issued December 2023· Expires December 2026</p>
+<p>Issued December 2023 · Expires December 2026</p>
 <p><a href="https://ti-user-certificates.s3.amazonaws.com/e0df7fbf-a057-42af-8a1f-590912be5460/8d5a36b6-bc08-459c-bf82-b1f2fa99061a-thomas-s-dean-jr-e4c7c242-8fc5-4162-8d94-e69902408a62-certificate.pdf">Certificate ID Number: LF-iidmc7hahx</a></p>
 <p>Skills: Podman · Containers · Kubernetes · Linux · Docker</p>
 <div style="page-break-after: always"></div>
 <h3 id="certified-kubernetes-application-developer-ckad"><strong>Certified Kubernetes Application Developer (CKAD)</strong></h3>
 <h4 id="cloud-native-computing-foundation"><strong>Cloud Native Computing Foundation</strong></h4>
-<p>Issued December 2023· Expires December 2026</p>
+<p>Issued December 2023 · Expires December 2026</p>
 <p><a href="https://ti-user-certificates.s3.amazonaws.com/e0df7fbf-a057-42af-8a1f-590912be5460/8d5a36b6-bc08-459c-bf82-b1f2fa99061a-thomas-s-dean-jr-5ef50221-9678-4272-bb86-bd8744c31d5f-certificate.pdf">Certificate ID Number: LF-ysuq5lxat1</a></p>
 <p>Skills: Podman · Containers · Kubernetes · Linux · Docker</p>
 <h3 id="kubernetes-and-cloud-native-associate-kcna"><strong>Kubernetes and Cloud Native Associate (KCNA)</strong></h3>
@@ -641,9 +641,14 @@ code {
 <p>Issued July 2022 · Expires July 2025</p>
 <p><a href="https://ti-user-certificates.s3.amazonaws.com/e0df7fbf-a057-42af-8a1f-590912be5460/8d5a36b6-bc08-459c-bf82-b1f2fa99061a-thomas-s-dean-jr-52aeb184-d3e2-4cc0-a248-dfc4504ea59f-certificate.pdf">Certificate ID Number: LF-3yptztfllg</a></p>
 <p>Skills: Podman · Containers · Kubernetes · Linux · Docker</p>
+<h3 id="amateur-radio-general-class-license"><strong>Amateur Radio General Class License</strong></h3>
+<h4 id="federal-communications-commission"><strong>Federal Communications Commission</strong></h4>
+<p>Issued Jan 2022 · Expires Jan 2032</p>
+<p><a href="https://wireless2.fcc.gov/UlsApp/UlsSearch/license.jsp?licKey=4545381">License ID: KD9UEN</a></p>
+<p>Skills: Electronics</p>
 <h3 id="microsoft-certified-azure-fundamentals-az-900"><strong>Microsoft Certified: Azure Fundamentals (AZ-900)</strong></h3>
 <h4 id="microsoft"><strong>Microsoft</strong></h4>
-<p>Issued July 2020</p>
+<p>Issued July 2020 · Does Not Expire</p>
 <p><a href="https://www.credly.com/badges/0ba6530d-eb11-48c8-b3ba-be5134bd3243/linked_in_profile">Microsoft Certified: Azure Fundamentals Certificate</a></p>
 <p>Skills: Microsoft Azure</p>
 
