--- a/Resume-Tom-Dean.html
+++ b/Resume-Tom-Dean.html
@@ -372,7 +372,7 @@ code {
 <p><strong><a href="https://www.linkedin.com/in/tomdeanjr">LinkedIn: https://www.linkedin.com/in/tomdeanjr</a></strong></p>
 <p><strong><a href="https://github.com/southsidedean">GitHub: https://github.com/southsidedean</a></strong></p>
 <h2 id="summary"><strong>Summary</strong></h2>
-<p>I'm a seasoned technologist, looking for direct-hire or W2 contract roles in a remote-first capacity.  I'm available on short notice.</p>
+<p>I'm a seasoned technologist, looking for direct-hire or W2 contract roles in a remote-first capacity.</p>
 <p><strong>Top Skills:</strong></p>
 <ul>
 <li>Linux (Ross Brunson and I wrote the RHCSA 8 course for A Cloud Guru)</li>
@@ -389,6 +389,11 @@ code {
 <p>Let's build something great together!</p>
 <div style="page-break-after: always"></div>
 <h2 id="experience"><strong>Experience</strong></h2>
+<h3 id="field-engineer"><strong>Field Engineer</strong></h3>
+<h4 id="buoyant"><strong>Buoyant</strong></h4>
+<h4 id="jan-2024---current--greater-chicago-area--remote">Jan 2024 - Current · Greater Chicago Area · Remote</h4>
+<p>In my role as Field Engineer at Buoyant, I assist customers with improving the reliability, scalability and security of their Kubernetes workloads, while reducing network cost and latency, using Buoyant Enterprise for Linkerd and Buoyant Cloud.</p>
+<p>Skills: Kubernetes · Linux · Cloud Computing · Containers · Engineering · Docker · Podman · Cloud-Native Architecture</p>
 <h3 id="technical-training-architect"><strong>Technical Training Architect</strong></h3>
 <h4 id="mission-cloud--full-time"><strong>Mission Cloud · Full-time</strong></h4>
 <h4 id="nov-2023---jan-2024--greater-chicago-area--remote">Nov 2023 - Jan 2024 · Greater Chicago Area · Remote</h4>
@@ -401,15 +406,15 @@ code {
 <li>Technical Training Content (Curation and Creation) and Training Paths</li>
 <li>The &quot;second half&quot; of the Apprenticeship program</li>
 </ul>
-<p>There was a corporate re-organization at the beginning of January 2024, and I was one of the many Mission employees impacted by layoffs.</p>
+<p>During a corporate re-organization at the beginning of January 2024 my role was impacted.</p>
 <p>Skills: GitHub · Kubernetes · Terraform · Amazon Web Services (AWS) · Linux</p>
 <h3 id="education-curriculum-architectdeveloper"><strong>Education Curriculum Architect/Developer</strong></h3>
 <h4 id="d2iq--full-time"><strong>D2iQ · Full-time</strong></h4>
 <h4 id="aug-2021---feb-2023--greater-chicago-area--remote">Aug 2021 - Feb 2023 · Greater Chicago Area · Remote</h4>
 <p>As a principal on my team at D2iQ, I owned the Learning and Development function and managed the day-to-day and strategic operations of content development and class delivery.</p>
 <p>I was in charge of maintaining and delivering a catalog of instructor-led courses that included the Cloud Native Computing Foundation (CNCF) space and a growing catalog of other Kubernetes topics, for both internal and external students, including building, improving, optimizing and maintaining an in-house, automated hands-on labs platform in Amazon Web Services (AWS), using GitLab, CI/CD and Terraform to deliver valuable hands-on experience for our students.</p>
-<p>Throughout 2022, I also led a selection process to select a learning management system and accompanying hands-on labs system to make a pivot to on-demand learning. I evaluated the scope of public offerings for learning management systems (Docebo, Skilljar, Blackboard, Instructure, Appsembler and more) and hands-on labs systems (CloudShare, Skillable, Instruqt , Appsembler and more). I spent the end of 2022 integrating our selection of Docebo and CloudShare so we could fill it with content and labs and launch in early 2023. Unfortunately, the project was cancelled in early 2023 and my position was eliminated.</p>
 <div style="page-break-after: always"></div>
+<p>Throughout 2022, I also led a selection process to select a learning management system and accompanying hands-on labs system to make a pivot to on-demand learning. I evaluated the scope of public offerings for learning management systems (Docebo, Skilljar, Blackboard, Instructure, Appsembler and more) and hands-on labs systems (CloudShare, Skillable, Instruqt , Appsembler and more). I spent the end of 2022 integrating our selection of Docebo and CloudShare so we could fill it with content and labs and launch in early 2023. Unfortunately, the project was cancelled in early 2023 and my position was eliminated.</p>
 <p>In my role, I not only led, but was hands-on, from writing Terraform automation in GitLab to build lab environments in AWS, to advancing my fledgling Kubernetes skills every day as both a student and a teacher.</p>
 <p>Skills: Continuous Integration and Continuous Delivery (CI/CD) · Gitlab · GitHub · Kubernetes · Containers · Terraform · Amazon Web Services (AWS) · Podman · Docker · DevOps · Git · GitOps · AWS CloudFormation · Virtualization · Linux KVM · VMware · Linux · Ubuntu · Red Hat Linux · Microsoft Azure · Unix · System Architecture · Disaster Recovery · Networking · DNS · Firewalls · System Administration · Apache · System Deployment · TCP/IP · High Availability · Enterprise Architecture · NFS · Shell Scripting · CentOS · Bash · Mac OS X</p>
 <h3 id="training-architect"><strong>Training Architect</strong></h3>
@@ -424,6 +429,7 @@ code {
 <li>Hands-on with HAProxy Load Balancer</li>
 </ul>
 <p>Skills: GitHub · Kubernetes · Containers · Amazon Web Services (AWS) · Podman · Docker · DevOps · Git · GitOps · AWS CloudFormation · Virtualization · Linux KVM · Linux · Ubuntu · Red Hat Linux · Microsoft Azure · Unix · System Architecture · Disaster Recovery · Networking · DNS · Firewalls · System Administration · Apache · System Deployment · TCP/IP · High Availability · Enterprise Architecture · NFS · Shell Scripting · CentOS · Bash · Mac OS X</p>
+<div style="page-break-after: always"></div>
 <h3 id="linux-training-architect"><strong>Linux Training Architect</strong></h3>
 <h4 id="linux-academy--full-time"><strong>Linux Academy · Full-time</strong></h4>
 <h4 id="sep-2019---aug-2020--greater-chicago-area--remote">Sep 2019 - Aug 2020 · Greater Chicago Area · Remote</h4>
@@ -446,7 +452,6 @@ code {
 <h4 id="farm-journal--freelance"><strong>Farm Journal · Freelance</strong></h4>
 <h4 id="feb-2019---apr-2019--greater-chicago-area--remote">Feb 2019 - Apr 2019 · Greater Chicago Area · Remote</h4>
 <p>I was on-call as an Independent Consultant on a series of smaller projects for Farm Journal Media as needed. This was a secondary role for me.</p>
-<div style="page-break-after: always"></div>
 <p>Skills: Virtualization · VMware · Linux · Ubuntu · Red Hat Linux · Unix · System Architecture · Disaster Recovery · Networking · DNS · Cisco Technologies · Firewalls · System Administration · Storage Area Networks · Apache · System Deployment · TCP/IP · High Availability · Enterprise Architecture · Shell Scripting · CentOS · Bash · Server Architecture · Mac OS X</p>
 <h3 id="sabbatical---training--hobbies--dad-time"><strong>Sabbatical - Training / Hobbies / Dad Time</strong></h3>
 <h4 id="dean-household"><strong>Dean Household</strong></h4>
@@ -468,7 +473,6 @@ code {
 <li>Assisted with design and deployment of new Acronis Backup on-premise solution under VMWare</li>
 </ul>
 <p>Skills: Virtualization · VMware · Linux · Ubuntu · Red Hat Linux · Unix · System Architecture · Disaster Recovery · Networking · DNS · Cisco Technologies · Firewalls · System Administration · Storage Area Networks · Apache · System Deployment · TCP/IP · High Availability · Enterprise Architecture · Shell Scripting · CentOS · Bash · Server Architecture · Mac OS X</p>
-<div style="page-break-after: always"></div>
 <h3 id="linux-lead-engineer"><strong>Linux Lead Engineer</strong></h3>
 <h4 id="the-phoenix-group--contract"><strong>The Phoenix Group · Contract</strong></h4>
 <h4 id="jan-2018---feb-2018--chicago-il--hybrid">Jan 2018 - Feb 2018 · Chicago, IL · Hybrid</h4>
